mans head cut off fixed

--- a/src/components/header/h.css
+++ b/src/components/header/h.css
@@ -3,7 +3,7 @@
 .header_container {
   background-image: url("../../assets/couple2.jpg");
   background-size: cover;
-  background-position: center center;
+  background-position: center 30%;
   position: relative;
   width: 100%;
   height: 80vh;
